--- a/frontend/styles/Teams.module.css
+++ b/frontend/styles/Teams.module.css
@@ -1,10 +1,12 @@
 .teams {
-  padding: 0 2rem 3rem 2rem;
+  /* padding: 0 2rem 3rem 2rem; */
   padding-bottom: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .teams h1 {
@@ -17,6 +19,8 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 1rem;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .teams .cards figcaption {
@@ -45,9 +49,9 @@
 
 /* tablet */
 @media (min-width: 768px) {
-  .teams {
+  /* .teams {
     padding: 0 4rem 3rem 4rem;
-  }
+  } */
 
   .teams h1 {
     font-size: 1.7rem;
@@ -60,11 +64,9 @@
 
 /* Desktop  */
 @media (min-width: 1024px) {
-  .teams {
+  /* .teams {
     padding: 0 12% 3rem 12%;
-    max-width: 1440px;
-    margin: 0 auto;
-  }
+  } */
   .teams h1 {
     font-size: 2.5rem;
   }
